feat: Add/Remove Studios
